# proper-code

./: .gitignore  README.md  pyproject.toml
src/propercode/agents/: orchestrator.py
src/propercode/agents/memory/: manager.py  state.py  store.py
src/propercode/agents/nodes/: __init__.py  code_eval.py  context.py  plan.py
src/propercode/agents/providers/: base.py  openrouter.py
src/propercode/agents/tools/: file.py  memory.py
src/propercode/cli/: __init__.py  banner.py
src/propercode/cli/commands/: init.py  keys.py  run.py  stats.py
src/propercode/cli/core/: config.py
src/propercode/models/: cli_config.py
src/propercode/models/agents/: memory_models.py  node_outputs.py
